created base layout for quiz by adding buttons and doing some css styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,24 @@
     <title>Code Quiz</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
+    <main class="container">
+        <div id="question-container">
+            <div id="question">Question</div>
+            <div id="answer-buttons" class="buttonGrid">
+                <button class="buttons">A</button>
+                <button class="buttons">B</button>
+                <button class="buttons">C</button>
+                <button class="buttons">D</button>
+            </div>
+        </div>
+        <div class="controls">
+            <button id="startButton" class="buttons">START</button>
+            <button id="nextButton" class="buttons">NEXT</button>
+        </div>
+    </main>
     <script src="./assets/javascript/script.js"></script>
 </body>
+
 </html>
