--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
         <div id="question-container" class="hide">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
-                <button id=btnA class="btn">A</button>
-                <button id=btnB class="btn">B</button>
-                <button id=btnC class="btn">C</button>
-                <button id=btnD class="btn">D</button>
+                <button id=btn0 class="btn">A</button>
+                <button id=btn1 class="btn">B</button>
+                <button id=btn2 class="btn">C</button>
+                <button id=btn3 class="btn">D</button>
             </div>
         </div>
         <div class="controls">
             <button id="start-btn" class="start-btn btn">START</button>
-            <button id="next-btn" class="next-btn btn hide">NEXT</button>
         </div>
     </main>
     <script src="./assets/javascript/script.js"></script>
