--- a/index.html
+++ b/index.html
@@ -2,26 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code Quiz</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
-    <header class="header">
-        <a href="./highscore.html" id="highscore">View High Scores!</a>
-        <div id="timer">Time:</div>
-    </header>
+    <div id="timer">Time:</div>
+
     <main class="container">
         <div id="question-container" class="hide">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
-                <button id=btn0 class="btn">A</button>
-                <button id=btn1 class="btn">B</button>
-                <button id=btn2 class="btn">C</button>
-                <button id=btn3 class="btn">D</button>
+                <button id="btn0" class="btn">A</button>
+                <button id="btn1" class="btn">B</button>
+                <button id="btn2" class="btn">C</button>
+                <button id="btn3" class="btn">D</button>
             </div>
         </div>
         <div class="controls">
