fixed score and timer bug

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <div id="instructions">
       Hello, this is a code quiz application to test your knowledge on
-      javascript. The quiz will start with 120 seconds. For each question you
-      answer incorrectly, 15 seconds will be subtracted from the timer. When the
+      javascript. The quiz will start with 60 seconds. For each question you
+      answer incorrectly, 15 seconds will be subtracted from the timer. If you run out of time the quiz will end. For each question you answer correct your score will increase. When the
       game is over you can submit your score! Good luck!
     </div>
     <div id="timer" class="hide">GO!</div>
